making some properties required
