# server/api/model_user_login_request.go
@@ -12,6 +12,8 @@ package api
 
 import (
 	"encoding/json"
+	"bytes"
+	"fmt"
 )
 
 // checks if the UserLoginRequest type satisfies the MappedNullable interface at compile time
@@ -20,17 +22,21 @@ var _ MappedNullable = &UserLoginRequest{}
 // UserLoginRequest struct for UserLoginRequest
 type UserLoginRequest struct {
 	// Email of the user trying to login.
-	Email *string `json:"email,omitempty"`
+	Email string `json:"email"`
 	// Password of the user.
-	Password *string `json:"password,omitempty"`
+	Password string `json:"password"`
 }
+
+type _UserLoginRequest UserLoginRequest
 
 // NewUserLoginRequest instantiates a new UserLoginRequest object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewUserLoginRequest() *UserLoginRequest {
+func NewUserLoginRequest(email string, password string) *UserLoginRequest {
 	this := UserLoginRequest{}
+	this.Email = email
+	this.Password = password
 	return &this
 }
 
@@ -42,68 +48,52 @@ func NewUserLoginRequestWithDefaults() *UserLoginRequest {
 	return &this
 }
 
-// GetEmail returns the Email field value if set, zero value otherwise.
+// GetEmail returns the Email field value
 func (o *UserLoginRequest) GetEmail() string {
-	if o == nil || IsNil(o.Email) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.Email
+
+	return o.Email
 }
 
-// GetEmailOk returns a tuple with the Email field value if set, nil otherwise
+// GetEmailOk returns a tuple with the Email field value
 // and a boolean to check if the value has been set.
 func (o *UserLoginRequest) GetEmailOk() (*string, bool) {
-	if o == nil || IsNil(o.Email) {
+	if o == nil {
 		return nil, false
 	}
-	return o.Email, true
+	return &o.Email, true
 }
 
-// HasEmail returns a boolean if a field has been set.
-func (o *UserLoginRequest) HasEmail() bool {
-	if o != nil && !IsNil(o.Email) {
-		return true
-	}
-
-	return false
-}
-
-// SetEmail gets a reference to the given string and assigns it to the Email field.
+// SetEmail sets field value
 func (o *UserLoginRequest) SetEmail(v string) {
-	o.Email = &v
+	o.Email = v
 }
 
-// GetPassword returns the Password field value if set, zero value otherwise.
+// GetPassword returns the Password field value
 func (o *UserLoginRequest) GetPassword() string {
-	if o == nil || IsNil(o.Password) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.Password
+
+	return o.Password
 }
 
-// GetPasswordOk returns a tuple with the Password field value if set, nil otherwise
+// GetPasswordOk returns a tuple with the Password field value
 // and a boolean to check if the value has been set.
 func (o *UserLoginRequest) GetPasswordOk() (*string, bool) {
-	if o == nil || IsNil(o.Password) {
+	if o == nil {
 		return nil, false
 	}
-	return o.Password, true
+	return &o.Password, true
 }
 
-// HasPassword returns a boolean if a field has been set.
-func (o *UserLoginRequest) HasPassword() bool {
-	if o != nil && !IsNil(o.Password) {
-		return true
-	}
-
-	return false
-}
-
-// SetPassword gets a reference to the given string and assigns it to the Password field.
+// SetPassword sets field value
 func (o *UserLoginRequest) SetPassword(v string) {
-	o.Password = &v
+	o.Password = v
 }
 
 func (o UserLoginRequest) MarshalJSON() ([]byte, error) {
@@ -116,13 +106,47 @@ func (o UserLoginRequest) MarshalJSON() ([]byte, error) {
 
 func (o UserLoginRequest) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Email) {
-		toSerialize["email"] = o.Email
-	}
-	if !IsNil(o.Password) {
-		toSerialize["password"] = o.Password
-	}
+	toSerialize["email"] = o.Email
+	toSerialize["password"] = o.Password
 	return toSerialize, nil
+}
+
+func (o *UserLoginRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"email",
+		"password",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varUserLoginRequest := _UserLoginRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varUserLoginRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = UserLoginRequest(varUserLoginRequest)
+
+	return err
 }
 
 type NullableUserLoginRequest struct {
